# attendee-pipecat

./: .env.example  README.md  SETUP.md  pyproject.toml
app/: main.py  runner.py
static/: index.html
